@@ -1,7 +1,7 @@
 /* select.cc
 
    Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
-   2005 Red Hat, Inc.
+   2005, 2006 Red Hat, Inc.
 
    Written by Christopher Faylor of Cygnus Solutions
    cgf@cygnus.com
@@ -30,7 +30,6 @@ details. */
 #define USE_SYS_TYPES_FD_SET
 #include <winsock.h>
 #include "cygerrno.h"
-#include "select.h"
 #include "security.h"
 #include "path.h"
 #include "fhandler.h"
